--- a/app/src/main/res/layout/fragment_detail_dialog.xml
+++ b/app/src/main/res/layout/fragment_detail_dialog.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="16dp">
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView_history_detail"
@@ -54,12 +55,9 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview_histoy_detail_dialog"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="300dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_total_dialog_fragment" />
 
