--- a/app/src/main/res/layout/recyclerview_product_item.xml
+++ b/app/src/main/res/layout/recyclerview_product_item.xml
@@ -77,7 +77,7 @@
             card_view:ignore="HardcodedText" />
 
         <RatingBar
-            android:id="@+id/ratingBar"
+            android:id="@+id/ratingBar_product"
             style="@style/Widget.AppCompat.RatingBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -90,24 +90,24 @@
             app:layout_constraintTop_toBottomOf="@+id/ProductItemName" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/text_rating_plain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="4.7"
-            app:layout_constraintStart_toEndOf="@+id/ratingBar"
+            app:layout_constraintStart_toEndOf="@+id/ratingBar_product"
             app:layout_constraintTop_toBottomOf="@+id/ProductItemName"
             card_view:ignore="HardcodedText" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/text_rating_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="(51)"
-            app:layout_constraintStart_toEndOf="@+id/textView"
+            app:layout_constraintStart_toEndOf="@+id/text_rating_plain"
             app:layout_constraintTop_toBottomOf="@+id/ProductItemName"
             card_view:ignore="HardcodedText" />
 
@@ -123,7 +123,7 @@
             app:layout_constraintEnd_toStartOf="@+id/spinner"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
+            app:layout_constraintTop_toBottomOf="@+id/ratingBar_product"
             card_view:ignore="HardcodedText" />
 
         <Spinner
