--- a/app/src/main/res/layout/recyclerview_type_item.xml
+++ b/app/src/main/res/layout/recyclerview_type_item.xml
@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/secondaryColor"
-    android:orientation="vertical"
-    android:padding="50dp">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/TypeItemTittle"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:elevation="2dp"
         android:gravity="center_horizontal"
         android:text="TextView"
-        android:textColor="@color/primaryTextColor" />
+        android:textColor="@color/primaryTextColor"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/image_type_adapter"
+        app:layout_constraintEnd_toEndOf="@+id/image_type_adapter"
+        app:layout_constraintStart_toStartOf="@+id/image_type_adapter"
+        app:layout_constraintTop_toTopOf="@+id/image_type_adapter" />
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_weight="1"
-        app:srcCompat="@color/secondaryLightColor" />
-</LinearLayout>
+        android:id="@+id/image_type_adapter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/craft_preview" />
+</android.support.constraint.ConstraintLayout>
